// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectForm Fields Defines form fields Project form reducer should handle GET_PROJECT_DETAIL_ERROR with and return initialState 1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": -1,
    "companyId": -1,
    "headOfProject": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "cdmNotifiable": true,
    "cnNumber": 2,
    "comment": "",
    "companyId": 1,
    "contractTypeId": "",
    "contractorId": 1,
    "countryId": 3,
    "currencyId": 1,
    "engagementId": 2,
    "firstAssetWorkedOn": 0,
    "headOfProject": "",
    "name": "",
    "pmHasExperience": true,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": 0,
    "status": 1,
    "thirdAssetWorkedOn": 0,
  },
  "loading": false,
  "notify": 0,
}
`;

exports[`ProjectForm Fields Defines form fields Project form reducer should handle add project successfully 1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": -1,
    "companyId": -1,
    "headOfProject": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": undefined,
  "form": Object {
    "approxValue": "",
    "cdmNotifiable": true,
    "cnNumber": 2,
    "comment": "",
    "companyId": 1,
    "contractTypeId": "",
    "contractorId": 1,
    "countryId": 3,
    "currencyId": 1,
    "engagementId": 2,
    "firstAssetWorkedOn": 0,
    "headOfProject": "",
    "name": "",
    "pmHasExperience": true,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": 0,
    "status": 1,
    "thirdAssetWorkedOn": 0,
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`ProjectForm Fields Defines form fields Project form reducer should handle edit project successfully 1`] = `
Object {
  "enquiryOverview": Object {
    "cnNumber": -1,
    "companyId": -1,
    "headOfProject": "",
    "projectManager": "",
    "projectName": "",
    "scope": "",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": undefined,
  "form": Object {
    "approxValue": "",
    "cdmNotifiable": true,
    "cnNumber": 2,
    "comment": "",
    "companyId": 1,
    "contractTypeId": "",
    "contractorId": 1,
    "countryId": 3,
    "currencyId": 1,
    "engagementId": 2,
    "firstAssetWorkedOn": 0,
    "headOfProject": "",
    "name": "",
    "pmHasExperience": true,
    "probabilityOfWinning": "",
    "projectId": "TestProjectId",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": 0,
    "status": 1,
    "thirdAssetWorkedOn": 0,
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`ProjectForm Fields Defines form fields Project form reducer should handle get projectEnquiryOverview successfully 1`] = `
Object {
  "enquiryOverview": Object {
    "projectId": "1",
  },
  "enquiryOverviewError": null,
  "error": null,
  "event": 3,
  "form": Object {
    "approxValue": "",
    "cdmNotifiable": true,
    "cnNumber": 2,
    "comment": "",
    "companyId": 1,
    "contractTypeId": "",
    "contractorId": 1,
    "countryId": 3,
    "currencyId": 1,
    "engagementId": 2,
    "firstAssetWorkedOn": 0,
    "headOfProject": "",
    "name": "",
    "pmHasExperience": true,
    "probabilityOfWinning": "",
    "projectId": "",
    "projectManager": "",
    "projectOwner": "",
    "scope": "",
    "secondAssetWorkedOn": 0,
    "status": 1,
    "thirdAssetWorkedOn": 0,
  },
  "loading": false,
  "notify": 0,
}
`;
